# DeeperVulkan

./: DeeperVulkan.xmind  LICENSE  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  DeeperVulkan.jks  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shader/: commonTexLight.frag  commonTexLight.vert  sample4_11.frag  sample5_1.frag  sample5_1.vert  sample5_10.frag  sample5_2.frag  sample5_2.vert  sample5_3.vert  sample5_4.vert  sample5_5.vert  sample5_6.vert  sample5_9.frag  sample5_9.vert  sample6_1.frag  sample6_1.vert  sample6_10.frag  sample6_10.vert  sample6_5.frag  sample6_6-earth.frag  sample6_6-moon.frag  sample6_6-moonearth.vert  sample6_6-star.vert  sample6_8.frag  sample6_8.vert  sample6_9.frag  sample6_9.vert  sample7_1.frag  sample7_1.vert  sample7_2.frag  sample7_2.vert  sample7_6.frag  sample7_6.vert
app/src/main/assets/texture/: 256Linear.bntex  32Linear.bntex  boardGreen.bn3dtex  boardRed.bn3dtex  fp.bntex  ghxp.bntex  mipmap.bntex  moon.bntex  robot2.bntex  vulkan.bntexa  wall.bntex  wall.pkm
app/src/main/cpp/bndev/: BallData.cpp  BallData.h  BeltData.cpp  BeltData.h  CircleData.cpp  CircleData.h  ColorRect.cpp  ColorRect.h  Cube.cpp  Cube.h  CubeData.cpp  CubeData.h  FlatData.cpp  FlatData.h  MyVulkanManager.cpp  MyVulkanManager.h  ObjectData.cpp  ObjectData.h  PlanetData.cpp  PlanetData.h  ShaderCompileUtil.cpp  ShaderCompileUtil.h  ShaderQueueSuit_Common.cpp  ShaderQueueSuit_Common.h  ShaderQueueSuit_Earth.cpp  ShaderQueueSuit_Earth.h  ShaderQueueSuit_Moon.cpp  ShaderQueueSuit_Moon.h  SixPointedStar.cpp  SixPointedStar.h  SkyData.cpp  SkyData.h  ThreadTask.cpp  ThreadTask.h  TriangleData.cpp  TriangleData.h  help.h  main.cpp  mylog.h
app/src/main/cpp/util/: CameraUtil.cpp  CameraUtil.h  ColorObject.cpp  ColorObject.h  DrawableObjectCommon.cpp  DrawableObjectCommon.h  FPSUtil.cpp  FPSUtil.h  FileUtil.cpp  FileUtil.h  HelpFunction.cpp  HelpFunction.h  LightManager.cpp  LightManager.h  LoadUtil.cpp  LoadUtil.h  Matrix.h  MatrixState3D.cpp  MatrixState3D.h  Normal.cpp  Normal.h  TexArrayDataObject.cpp  TexArrayDataObject.h  TexDataObject.cpp  TexDataObject.h  TextureManager.cpp  TextureManager.h  ThreeDTexDataObject.cpp  ThreeDTexDataObject.h
app/src/main/cpp/vksysutil/: vulkan_wrapper.cpp  vulkan_wrapper.h
(+6 files in other folders)
